--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "license": "MIT",
     "dependencies": {
         "commander": "^7.0.0",
-        "commander.js-error": "^1.1.0",
-        "jsonfile": "^6.1.0"
+        "commander.js-error": "^1.1.0"
     },
     "scripts": {
         "build": "babel . --ignore 'node_modules,dist' -d dist",
-        "start": "babel-node index.js"
+        "start": "babel-node index.js",
+        "test": "mocha -r @babel/register --recursive"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.10",
         "@babel/core": "^7.12.10",
         "@babel/node": "^7.12.10",
-        "@babel/preset-env": "^7.12.11"
+        "@babel/preset-env": "^7.12.11",
+        "@babel/register": "^7.12.10",
+        "chai": "^4.2.0",
+        "fs-monkey": "^1.0.1",
+        "memfs": "^3.2.0",
+        "mocha": "^8.2.1"
     }
 }
