--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "author": "laggu <laggu91@gmail.com>",
     "license": "MIT",
     "dependencies": {
-        "commander": "^7.0.0"
+        "commander": "^7.0.0",
+        "commander.js-error": "^1.1.0",
+        "loglevel": "^1.7.1"
     },
     "scripts": {
-        "build": "babel . --ignore 'node_modules,dist' -d dist",
+        "build": "rm -rf dist && babel . --ignore 'node_modules,dist' -d dist",
         "start": "babel-node index.js",
         "test": "mocha -r @babel/register --recursive"
     },
