--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "algopuni",
     "version": "0.1.0",
-    "main": "index.js",
+    "main": "src/index.js",
     "author": "laggu <laggu91@gmail.com>",
     "license": "MIT",
     "dependencies": {
@@ -10,8 +10,8 @@
         "loglevel": "^1.7.1"
     },
     "scripts": {
-        "build": "rm -rf dist && babel . --ignore 'node_modules,dist' -d dist",
-        "start": "babel-node index.js",
+        "build": "rm -rf dist && babel src --ignore 'node_modules,dist' -d dist",
+        "start": "babel-node src/index.js",
         "test": "mocha -r @babel/register --recursive"
     },
     "devDependencies": {
@@ -23,7 +23,8 @@
         "chai": "^4.2.0",
         "fs-monkey": "^1.0.1",
         "memfs": "^3.2.0",
-        "mocha": "^8.2.1"
+        "mocha": "^8.2.1",
+        "sinon": "^9.2.4"
     },
     "bin": {
         "algopuni": "dist/index.js"
