--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dependencies": {
         "commander": "^7.0.0",
         "commander.js-error": "^1.1.0",
-        "loglevel": "^1.7.1"
+        "loglevel": "^1.7.1",
+        "puppeteer": "^7.1.0"
     },
     "scripts": {
         "build": "rm -rf dist && babel src --ignore 'node_modules,dist' -d dist",
