20210221 user add 구현 완료
Co-authored-by: 용주 최 <dydwn0928@gmail.com>
Co-authored-by: 구원 라 <laggu91@gmail.com>

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
     "presets": [["@babel/preset-env", {"targets": {"chrome": "55"}}]],
+    "plugins": ["@babel/plugin-proposal-throw-expressions"],
     "ignore": [
         "*/node_modules",
         "*/dist",
