--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "commander": "^7.0.0",
         "loglevel": "^1.7.1",
+        "microtime": "^3.0.0",
         "prompts": "^2.4.0",
         "puppeteer": "^7.1.0"
     },
