--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "scripts": {
         "build": "rm -rf dist && babel src --ignore 'node_modules,dist' -d dist",
         "start": "babel-node src/index.js",
-        "test": "mocha -r @babel/register --recursive"
+        "test": "mocha -r @babel/register --recursive",
+        "release": "yarn build && yarn publish"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.10",
